--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,12 @@
-<h1>Wedding App Welcome Page</h1>
-<p>This is a list of users on this site:</p>
+<h1>Have a Wedding for $1000</h1>
+<h3>The most important day of your life shouldn't be the most expensive.</h3>
+
+<div class="wedding_welcome">
+<p>If you're planning a wedding on a budget, you already know you aren't going to be able to afford all the bells and whistles that popular culture says you 'should' have. But with careful planning and focus, you can have the best wedding you can afford. This site is here to help.</p>
+</div>
+
+<div class="new_user_signup">
+ <p> <%= link_to 'Join Now', new_user_path %>
+  </p></div> | <div class="user_login"><%= link_to 'Login', user_path %></div> 
 
 
