--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,10 +7,10 @@
   </div>
   <div class="form-group">
     <%= f.label :email %>
-    <%= f.number_field :email %>
+    <%= f.text_field :email %>
   </div>
   <div class="form-group">
-    <%= f.label :user_name %>
+    <%= f.label :username %>
     <%= f.text_field :user_name %>
   </div>
    <div class="form-group">
@@ -18,11 +18,11 @@
     <%= f.text_field :location %>
   </div>
    <div class="form-group">
-    <%= f.label :role %>
+    <%= f.label :role_in_wedding %>
     <%= f.text_field :role %>
   </div>
    <div class="form-group">
-    <%= f.label :total_budget %>
+    <%= f.label :total_budget_amount %>
     <%= f.number_field :total_budget %>
   </div>
   <%= f.submit(:class => "btn btn-primary") %>
