--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1><%= @user.name %>'s Wedding Planning Start Page</h1>
+<div class="user_information_display">
+	<p>--- avatar or user image goes here ---</p>
+	<p><%= @user.name %> is the <%= @user.role %>!</p>
+	<p>Username: <%= @user.user_name %></p>
+	<p>Location: <%= @user.location %></p>
+	<p><%= @user.name %>'s total budget is: <%= @user.total_budget %></p>
+
+</div>
