add the capability for a user to create a password for their login

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,10 @@
 	<p>Username: <%= @user.user_name %></p>
 	<p>Location: <%= @user.location %></p>
 	<p><%= @user.name %>'s total budget is: <%= @user.total_budget %></p>
+</div>
+
+<div class="user_wedding_budget_priorities">
+	<p>These are your chosen Wedding Budget Priorities. To change them, </p>
 
 </div>
+
