--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,6 +9,14 @@
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
+  <div class="field">
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+  </div>
   <div class="form-group">
     <%= f.label :username %>
     <%= f.text_field :user_name %>
