--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,25 @@
 </head>
 <body>
 
+ <div id='container'>
+    <div id ='header'>
+      <% if current_user %>
+        Logged in as <%= current_user.user_name %>.
+        <%= link_to "Log Out", session_path("current"), method: 'delete' %>
+      <% else %>
+        <%= link_to "Sign Up", new_user_path %> or
+        <%= link_to "Log In", new_session_path %>
+      <% end %>
+    </div>
 
 
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, id: "flash_#{name}" %>
-    <% end %>
+<% flash.each do |name, msg| %>
+  <%= content_tag :div, msg, id: "flash_#{name}" %>
+<% end %>
 
 <%= yield %>
 
 
-
+  </div>
 </body>
 </html>
