add files and links for current user to edit profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,11 @@
 
 <div class="user_wedding_budget_priorities">
 	<p>These are your chosen Wedding Budget Priorities. To change them, </p>
-
 </div>
+
+<div class="navigation_footer">
+    <p><%= link_to "Edit Profile", edit_user_path(@user) %></p>
+</div>
+
+
 
