--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
  <div id='container'>
     <div id ='header'>
       <% if current_user %>
-        Logged in as <%= current_user.user_name %>.
+        Logged in as <%= link_to current_user.user_name, user_path(current_user) %>.
         <%= link_to "Log Out", session_path("current"), method: 'delete' %>
       <% else %>
         <%= link_to "Sign Up", new_user_path %> or
