--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<%= content_for(:title, "Edit Profile") %>
+
+<div class="edit-user container">
+
+  <h1>Edit Profile</h1>
+
+  <%= render 'form' %>
+
+</div>
