--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,27 +9,28 @@
 <body>
 
  <div id='container'>
-    <div id ='header'>
-      <% if current_user %>
-        Logged in as <%= link_to current_user.user_name, user_path(current_user) %>.
-        <%= link_to "Log Out", session_path("current"), method: 'delete' %>
-      <% else %>
-        <%= link_to "Sign Up", new_user_path %> or
-        <%= link_to "Log In", new_session_path %>
-      <% end %>
+    <div id ='user_header'>
+    	<% if current_user %>
+	    	Logged in as <%= current_user.user_name %>.
+	    	<%= link_to "Log Out", logout_path %>
+    	<% else %>
+	        <%= link_to "Sign Up", new_user_path %> or
+	        <%= link_to "Log In", new_session_path %>
+        <% end %>
     </div>
 
 
-<% flash.each do |name, msg| %>
-  <%= content_tag :div, msg, id: "flash_#{name}" %>
-<% end %>
+	<% flash.each do |name, msg| %>
+	  <%= content_tag :div, msg, id: "flash_#{name}" %>
+	<% end %>
 
-<%= yield %>
+	<%= yield %>
 
-<div id="footer">
+	<div id="footer">
 	
-	</div>
 		<%= link_to "Home", root_path %>
+		<%= link_to "View Profile", user_path(current_user) %>
 	</div>
+</div>
 </body>
 </html>
