--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <div id ='user_header'>
     	<% if current_user %>
 	    	Logged in as <%= current_user.user_name %>.
-	    	<%= link_to "Log Out", logout_path, method: "delete" %>
+	    	<%= link_to "Log Out", logout_path %>
     	<% else %>
 	        <%= link_to "Sign Up", new_user_path %> or
 	        <%= link_to "Log In", new_session_path %>
