--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,6 +9,10 @@
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
+  <div class="form-group">
+    <%= f.label :user_name, "Username" %>
+    <%= f.text_field :user_name %>
+  </div>
   <div class="field">
     <%= f.label :password %>
     <%= f.password_field :password %>
@@ -17,20 +21,16 @@
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
   </div>
-  <div class="form-group">
-    <%= f.label :username %>
-    <%= f.text_field :user_name %>
-  </div>
    <div class="form-group">
     <%= f.label :location %>
     <%= f.text_field :location %>
   </div>
    <div class="form-group">
-    <%= f.label :role_in_wedding %>
+    <%= f.label :role, "Role in wedding" %>
     <%= f.text_field :role %>
   </div>
    <div class="form-group">
-    <%= f.label :total_budget_amount %>
+    <%= f.label :total_budget, "Total budget amount" %>
     <%= f.number_field :total_budget %>
   </div>
   <%= f.submit(:class => "btn btn-primary") %>
