--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 	<p><%= @user.name %> is the <%= @user.role %>!</p>
 	<p>Username: <%= @user.user_name %></p>
 	<p>Location: <%= @user.location %></p>
-	<p><%= @user.name %>'s total budget is: <%= @user.total_budget %></p>
+	<p><%= @user.name %>'s total budget is: <%= number_to_currency(@user.total_budget) %></p>
 </div>
 
 <div class="user_wedding_budget_priorities">
