--- a/app/views/mockups/index.html
+++ b/app/views/mockups/index.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="row">
-    <p class="col-md-10 col-md-offset-1 intro">Weddings are expensive. How expensive, though, is determined by your budget. Answer these few simple questions to understand what you can spend.</p>
+    <p class="col-md-10 col-md-offset-1 lead">Weddings are expensive. How expensive, though, is determined by your budget. Answer these few simple questions to understand what you can spend.</p>
   </div>
 
   <div class="row">
@@ -26,27 +26,6 @@
         <div class="col-md-10 col-md-offset-1 form-group">
             <label for="months_until">How many months until the wedding?</label><br>
             <input id="months_until" type="number" value="1" min="1">
-            <!-- <p class="aside">(This is how long you have to save. We recommend not including <br>the final month prior to the actual wedding date.)</p> -->
-            <!-- <select id="months_until">
-                <option value="Less">Three Months or less</option>
-                <option value="Four">Four Months</option>
-                <option value="Five">Five Months</option>
-                <option value="Six">Six Months</option>
-                <option value="Seven">Seven Months</option>
-                <option value="Eight">Eight Months</option>
-                <option value="Nine">Nine Months</option>
-                <option value="Ten">Ten Months</option>
-                <option value="Eleven">Eleven Months</option>
-                <option value="Twelve">Twelve Months</option>
-                <option value="Thirteen">Thirteen Months</option>
-                <option value="Fourteen">Fourteen Months</option>
-                <option value="Fifteen">Fifteen Months</option>
-                <option value="Sixteen">Sixteen Months</option>
-                <option value="Seventeen">Seventeen Months</option>
-                <option value="Eighteen">Eighteen Months</option>
-                <option value="Nineteen">Nineteen Months</option>
-                <option value="Twenty">Twenty Months</option>
-            </select> -->
         </div>
 
         <div class="col-md-10 col-md-offset-1 form-group">
@@ -62,7 +41,7 @@
       <div class="col-md-10 col-md-offset-1 display_budget">
         <p>The national average for a wedding in 2013 was $25,200.</p>
         <div id="budget_result">
-            <p>According to the information you have provided, your Total Wedding Budget is: $<span class="  total_budget"></span></p>
+            <p>According to the information you have provided, your Total Wedding Budget is: $<span class="total_budget"></span></p>
         </div>
 
       </div>
