--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -20,10 +20,10 @@ h1 {
   margin-left: 10%;
 }
 
-h3 {
+#subheader {
   font-family: 'Quicksand', cursive;
-  font-size: 20px;
-  margin: 0 0 50px 14%;
+  font-size: 18px;
+  margin: -20px 0 40px 14%;
 }
 
 input{
