--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,26 @@
 </head>
 <body>
 
+  <div class="container">
+    
+    <div class="row">
+      <div id="header" class="col-md-8">
+        <h1><%= yield(:header) %></h1>
+      </div>
+      <div id="subheader"class="col-md-8 col-md-offset-1">
+        <h3><%= yield(:subheader) %></h3>
+      </div>
+    </div>
 
-
-	<% flash.each do |name, msg| %>
-	  <%= content_tag :div, msg, id: "flash_#{name}" %>
-	<% end %>
+    <div class="row">
+      <p class="col-md-10 col-md-offset-1 lead">
+        <%= yield(:lead) %>
+      </p>
+    </div>
 
 	<%= yield %>
 
+  </div>
 </div>
 </body>
 </html>
