--- a/app/views/mockups/index.html
+++ b/app/views/mockups/index.html
@@ -1,13 +1,18 @@
 <%= layout :application do %>
 
-<div class="container">
-  <div class="row">
-    <div id="header" class="col-md-8"><h1>Set a Wedding Budget</h1></div>
-    <div id="subheader"class="col-md-8 col-md-offset-1"><h3>Do you know how much you can spend?</h3></div>
-  </div>
 
   <div class="row">
-    <p class="col-md-10 col-md-offset-1 lead">Weddings are expensive. How expensive, though, is determined by your budget. Answer these few simple questions to understand what you can spend.</p>
+    <% content_for(:header) do %>
+      Test Budget Page
+    <% end %>
+
+    <% content_for(:subheader) do %>
+      Do you know how much you can spend?
+    <% end %>
+
+    <% content_for(:lead) do %>
+      Weddings are expensive. How expensive, though, is determined by your budget. Answer these few simple questions to understand what you can spend.
+    <% end %>
   </div>
 
   <div class="row">
@@ -37,17 +42,15 @@
           <button id="submit_budget_request" class="btn btn-default">What's my budget?</button>
         </div>
       </form>
+    </div>
+  </div>
 
-      <div class="col-md-10 col-md-offset-1 display_budget">
+<div class="col-md-10 col-md-offset-1 display_budget">
         <p>The national average for a wedding in 2013 was $25,200.</p>
         <div id="budget_result">
             <p>According to the information you have provided, your Total Wedding Budget is: $<span class="total_budget"></span></p>
         </div>
 
       </div>
-    </div>
-  </div>
-
-</div>
 
 <% end %>
