edited views and overall layout

--- a/app/views/budgets/show.html.erb
+++ b/app/views/budgets/show.html.erb
@@ -7,10 +7,11 @@
 <% end %>
 
 <% content_for(:lead) do %>
-	Weddings are expensive. You should approach your wedding planning having set a budget that is within your means. Given the information you provided, this is your Wedding Budget.
+	Weddings are expensive. You should approach your wedding planning having set a budget that is within your means.
 <% end %>
 
-    <div class="col-md-10 col-md-offset-1 subheader">
-      <p>The national average for a wedding in 2013 was $25,200.</p>
-      <p>According to the information you have provided, your Total Wedding Budget is: <%= number_to_currency(@total_budget, options = {precision: 0}) %></p>
-    </div>
+  <div class="col-md-10 col-md-offset-1 display_budget">
+    <p>The national average for a wedding in 2013 was $25,200.</p>
+    <p>According to the information you have provided, your Total Wedding Budget is: 
+    	<br><div class="total_calculated_budget"><h2><%= number_to_currency(@total_budget, options = {precision: 0}) %></h2></div></p>
+  </div>
