--- a/app/views/budgets/_form.html.erb
+++ b/app/views/budgets/_form.html.erb
@@ -7,8 +7,8 @@
     <%= f.text_field :speculated_amount %>
   </div>
   <div class="col-md-10 col-md-offset-1 form-group">
-    <%= f.label :saved, 'How much have you already saved?' %><br>
-    <%= f.text_field :saved %>
+    <%= f.label :amount_saved, 'How much have you already saved?' %><br>
+    <%= f.text_field :amount_saved %>
   </div>
   <div class="col-md-10 col-md-offset-1 form-group">
     <%= f.label :months_until, 'How many months until the wedding?' %><br>
