--- a/app/views/budgets/show.html.erb
+++ b/app/views/budgets/show.html.erb
@@ -14,7 +14,7 @@
 
 
   <div class="col-md-10 col-md-offset-1 lead">
-    <p>According to the information you entered for the previous questions, you anticipate spending <%= number_to_currency(@speculated_amount, options = {precision: 0}) %> but, according to your actual available funds, your actual <em>Total Wedding Budget</em> is: 
-    	<br><div class="total_calculated_budget"><h2><%= number_to_currency(@total_budget, options = {precision: 0}) %></h2></div></p>
+    <p>According to the information you entered for the previous questions, you anticipate spending <%= number_to_currency(@budget.speculated_amount, precision: 0) %> but, according to your available funds, your actual <em>Total Wedding Budget</em> is: 
+    	<br><div class="total_calculated_budget"><h2><%= number_to_currency(@budget.total_budget, options = {precision: 0}) %></h2></div></p>
   </div>
 
