--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -16,4 +16,10 @@
     <%= render 'form' %>
       
   </div>
+
+   <div class="col-md-10 col-md-offset-1 lead" id="show_budget_result">
+   	<p>The national average for a wedding in 2013 was $25,200.</p>
+    <p>According to the information you entered for the previous questions, you anticipate spending <%= number_to_currency(@budget.speculated_amount, precision: 0) %> but, according to your available funds, your actual <em>Total Wedding Budget</em> is 
+    	<br><div class="total_calculated_budget"><h2><%= number_to_currency(@budget.total_budget, options = {precision: 0}) %></h2></div></p>
+  </div>
 </div>
