--- a/app/views/budgets/_form.html.erb
+++ b/app/views/budgets/_form.html.erb
@@ -4,11 +4,11 @@
 
   <div class="col-md-10 col-md-offset-1 form-group">
     <%= f.label :speculated_amount, 'How much do you think you want to spend?' %><br>
-    <%= f.text_field :speculated_amount %>
+    <%= f.number_field :speculated_amount %>
   </div>
   <div class="col-md-10 col-md-offset-1 form-group">
     <%= f.label :amount_saved, 'How much have you already saved?' %><br>
-    <%= f.text_field :amount_saved %>
+    <%= f.number_field :amount_saved %>
   </div>
   <div class="col-md-10 col-md-offset-1 form-group">
     <%= f.label :months_until, 'How many months until the wedding?' %><br>
@@ -16,7 +16,7 @@
   </div>
   <div class="col-md-10 col-md-offset-1 form-group">
     <%= f.label :monthly_savings, 'How much can you realistically set aside each month?' %><br>
-    <%= f.text_field :monthly_savings %>
+    <%= f.number_field :monthly_savings %>
   </div>
   <div class="clear"></div>
   <div class="col-md-2 col-md-offset-1">
