--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,8 +6,8 @@
 
 body {
   background: url(turquoise_pattern.png) !important;
-  font-family: 'Quicksand', cursive;
-  font-size: 18px;
+  font-family: 'Merriweather', serif;
+  font-size: 17px;
 }
 
 h1 {
@@ -32,6 +32,11 @@ h1 {
   margin: -20px 0 40px 14%;
 }
 
+#instructions p {
+  font-size: 17px;
+  margin: 0 0 20px 0;
+}
+
 /*-- Index Page -- */
 input{
   border-radius: 5px;
@@ -53,4 +58,14 @@ input{
 .total_calculated_budget {
   text-align: center;
   font-weight: 700;
+}
+
+/*-- Checklist Page --*/
+#submit_checklist {
+  margin-top: 10px;
+  background-color: #47B5B7;
+  border: 1px solid grey;
+  font-size: 19px;
+  color: white;
+  text-shadow: 1px 1px 1px grey;
 }
