changes to layout/styling for checklist

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,12 @@
     <div class="row">
       <p class="col-md-10 col-md-offset-1 lead">
         <%= yield(:lead) %>
+      </p>      
+      <p class="col-md-10 col-md-offset-1 instructions">
+        <%= yield(:instructions) %>
       </p>
     </div>
+
 
   <%= yield %>
 
