--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,9 +32,15 @@ h1 {
   margin: -20px 0 40px 14%;
 }
 
-#instructions p {
+.instructions p {
   font-size: 17px;
   margin: 0 0 20px 0;
+}
+
+label {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 10px;
 }
 
 /*-- Index Page -- */
@@ -62,6 +68,16 @@ input{
 
 /*-- Checklist Page --*/
 #submit_checklist {
+  margin-top: 10px;
+  background-color: #47B5B7;
+  border: 1px solid grey;
+  font-size: 19px;
+  color: white;
+  text-shadow: 1px 1px 1px grey;
+}
+
+/*-- Checklist Display --*/
+#revise_checklist {
   margin-top: 10px;
   background-color: #47B5B7;
   border: 1px solid grey;
