changed from wedding to ceremony officiant

--- a/app/views/mockups/budget_checklist.html
+++ b/app/views/mockups/budget_checklist.html
@@ -108,7 +108,7 @@
 
         <div class="col-md-5 col-md-offset-1 form-group">
           <label>
-            <input type="checkbox" name="element" value="officiant"> Wedding Officiant
+            <input type="checkbox" name="element" value="officiant"> Ceremony Officiant
           </label>
         </div>
 
