index page with basic header/subheader content matching acceptance test

--- a/app/views/checklists/index.html.erb
+++ b/app/views/checklists/index.html.erb
@@ -3,7 +3,7 @@
       Making a Checklist
     <% end %>
 
-<!--     <% content_for(:subheader) do %>
+    <% content_for(:subheader) do %>
       Do you know what you want?
     <% end %>
 
@@ -13,5 +13,5 @@
 
     <% content_for(:instructions) do %>
       Spend a few minutes thinking about those elements of a wedding that are most meaningful to you. What are your Big Day Must Haves? When you're finished, click <em>Help Me Plan!</em> and get started!
-    <% end %> -->
+    <% end %>
   </div>
