changed acceptance tests to be more thorough, changed displayed information on mockups

--- a/app/views/mockups/display_budget.html
+++ b/app/views/mockups/display_budget.html
@@ -15,7 +15,7 @@
     <% end %>
 
     <% content_for(:instructions) do %>
-      Below is a list of Your Checklist Items. The average wedding budget breaks down to a set of typical percentages spent on each element. Beside each of your choices is an estimate of how much you should spend.
+      Below is a list of Your Checklist Items. The average wedding budget breaks down to a set of typical percentages spent on each element. Displayed beside each of your choices is a calculated estimate of how much you should spend based on your Total Wedding Budget of $10,000.
     <% end %>
   </div>
 
@@ -23,16 +23,16 @@
 
 
   <div class="row" id="display_budget_rows">
-    <div class="col-md-4 element">Wedding Dress and Accessories</div>
-    <div class="col-md-4 element">Reception Venue</div>
-    <div class="col-md-4 element">Wedding Rings</div>
+    <div class="col-md-4 element">Your estimated expense for the Wedding Dress and Accessories is $1200.</div>
+    <div class="col-md-4 element">Your estimated expense for the Reception Venue is $500.</div>
+    <div class="col-md-4 element">Your estimated expense for the Wedding Rings is $500.</div>
 
-    <div class="col-md-4 element">Wedding Cake</div>
-    <div class="col-md-4 element">Meals and Catering</div>
-    <div class="col-md-4 element">Photography</div>
+    <div class="col-md-4 element">Your estimated expense for the Wedding Cake is $500.</div>
+    <div class="col-md-4 element">Your estimated expense for the Meals and Catering is $4,700.</div>
+    <div class="col-md-4 element">Your estimated expense for the Photography is $1300.</div>
 
-    <div class="col-md-4 element">Wedding Flowers</div>
-    <div class="col-md-4 element">Ceremony Officiant</div>
+    <div class="col-md-4 element">Your estimated expense for the Wedding Flowers is $1100.</div>
+    <div class="col-md-4 element">Your estimated expense for the Ceremony Officiant is $200.</div>
   </div>
 
 
