--- a/app/views/mockups/budget_checklist.html
+++ b/app/views/mockups/budget_checklist.html
@@ -3,7 +3,7 @@
 
   <div class="row">
     <% content_for(:header) do %>
-      Test Checklist Page
+      Making a Checklist
     <% end %>
 
     <% content_for(:subheader) do %>
