revised acceptance test to cover full app flow, with changes made to mockups to reflect

--- a/app/views/mockups/show_checklist_and_estimates.html
+++ b/app/views/mockups/show_checklist_and_estimates.html
@@ -35,9 +35,11 @@
     <div class="col-md-4 element">Your estimated expense for the Ceremony Officiant is $200.</div>
   </div>
 
-
   <div class="clear"></div>
+  
   <div class="col-md-12"  id="revise_checklist">
-    <button class="btn btn-default">Revise Your Checklist</button>
+    <form action="/mockups/budget_checklist">
+      <button class="btn btn-default">Revise Your Checklist</button>
+    </form>
   </div>
   <% end %>
