edits to layout for mockups

--- a/app/views/mockups/index.html
+++ b/app/views/mockups/index.html
@@ -1,3 +1,5 @@
+<%= layout :application do %>
+
 <% content_for(:header) do %>
   Set a Wedding Budget
 <% end %>
@@ -37,3 +39,5 @@
     </div>
   </form>
 </div>
+
+<% end %>
