--- a/app/views/mockups/show_checklist_and_estimates.html
+++ b/app/views/mockups/show_checklist_and_estimates.html
@@ -23,7 +23,7 @@
 
 
   <div class="row" id="display_budget_rows">
-    <div class="col-md-4 element">Your estimated expense for the Wedding Dress and Accessories is $1200.</div>
+    <div class="col-md-4 element">Your estimated expense for the Wedding Dress is $1200.</div>
     <div class="col-md-4 element">Your estimated expense for the Reception Venue is $500.</div>
     <div class="col-md-4 element">Your estimated expense for the Wedding Rings is $500.</div>
 
@@ -36,7 +36,7 @@
   </div>
 
   <div class="clear"></div>
-  
+
   <div class="col-md-12"  id="revise_checklist">
     <form action="/mockups/budget_checklist">
       <button class="btn btn-default">Revise Your Checklist</button>
