--- a/app/views/budgets/create.html.erb
+++ b/app/views/budgets/create.html.erb
@@ -13,14 +13,14 @@
 <div class="col-md-10 col-md-offset-1 lead" id="show_budget_result">
   <p>At this time, you anticipate spending <%= number_to_currency(@budget.speculated_amount, precision: 0) %> but, according to your available funds, your actual <em>Total Wedding Budget</em> is 
     <br><div class="total_calculated_budget"><h2><%= number_to_currency(@budget.total_budget, options = {precision: 0}) %></h2></div></p>
-  <p>When it comes to spending that budget, it's easier to know where to start when you have an idea of what you want. On the next page is a checklist of the elements usually found in a wedding. Click on <em>Wedding Elements Checklist</em> to start making your own list.</p>
+  <p>When it comes to spending that budget, it's easier to know where to start when you have an idea of what you want. On the next page is a checklist of the elements usually found in a wedding. Click on <em>Wedding Elements Checklist</em> to start making your own.</p>
 
 </div>
 
 
   <div class="clear"></div>
   <div class="col-md-12"  id="revise_checklist">
-    <form action="/mockups/budget_checklist">
+    <form action="/budget_checklist">
       <button class="btn btn-default">Wedding Elements Checklist</button>
     </form>
   </div>
