edited budget_checklist mockup to show file path

--- a/app/views/mockups/budget_checklist.html
+++ b/app/views/mockups/budget_checklist.html
@@ -21,8 +21,8 @@
 
   <div class="row">
     <div class="checklist_form">
-      <form id="budget_checklist" action="/mockups/show_checklist_and_estimates" method="get">
-        <!-- change method to "post" when moving to development -->
+      <form id="budget_checklist" action="/show_checklist_and_estimates" method="post">
+
         <div class="col-md-5 col-md-offset-1 form-group">
           <label>
             <input type="checkbox" name="element" value="dress"> Wedding Dress and Accessories
