--- a/app/views/mockups/budget_checklist.html
+++ b/app/views/mockups/budget_checklist.html
@@ -21,7 +21,7 @@
 
   <div class="row">
     <div class="checklist_form">
-      <form id="budget_checklist" action="/show_checklist_and_estimates" method="post">
+      <form id="budget_checklist" action="/show" method="post">
 
         <div class="col-md-5 col-md-offset-1 form-group">
           <label>
