--- a/app/views/budgets/create.html.erb
+++ b/app/views/budgets/create.html.erb
@@ -10,11 +10,12 @@
   The national average for a wedding in 2013 was $25,200. 
 <% end %>
 
-<div class="col-md-10 col-md-offset-1 lead" id="show_budget_result">
-  <p>At this time, you anticipate spending <%= number_to_currency(@budget.speculated_amount, precision: 0) %> but, according to your available funds, your actual <em>Total Wedding Budget</em> is 
-    <br><div class="total_calculated_budget"><h2><%= number_to_currency(@budget.total_budget, options = {precision: 0}) %></h2></div></p>
-  <p>When it comes to spending that budget, it's easier to know where to start when you have an idea of what you want. On the next page is a checklist of the elements usually found in a wedding. Click on <em>Wedding Elements Checklist</em> to start making your own.</p>
-
+<div class="row">
+  <div class="col-md-10 col-md-offset-1" id="show_budget_result">
+    <p>At this time, you anticipate spending <%= number_to_currency(@budget.speculated_amount, precision: 0) %> but, according to your available funds, your actual <em>Total Wedding Budget</em> is 
+      <br><div class="total_calculated_budget"><h2><%= number_to_currency(@budget.total_budget, precision: 0) %></h2></div></p>
+    <p>When it comes to spending that budget, it's easier to know where to start when you have an idea of what you want. On the next page is a checklist of the elements usually found in a wedding. Click on <em>Wedding Elements Checklist</em> to start making your own.</p>
+  </div>
 </div>
 
 
