--- a/app/views/checklists/new.html.erb
+++ b/app/views/checklists/new.html.erb
@@ -14,7 +14,8 @@
 
 <div class="row">
   <div class="checklist_form">
-    <form id="budget_checklist" action="/checklist/" method="get">
+    <form id="budget_checklist" action="/checklist" method="post">
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
 
       <div class="col-md-5 col-md-offset-1 form-group">
         <label>
