--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,10 @@ h1 {
   margin: -20px 0 40px 14%;
 }
 
+.lead {
+  max-width: 80%;
+}
+
 label {
   font-size: 16px;
   font-weight: 100;
@@ -79,8 +83,7 @@ input{
 
 /*-- Checklist Display --*/
 #display_budget_rows {
-  border: 1px solid grey;
-  width: 85%;
+  width: 82%;
   margin: 10px auto;
 }
 
