changed method on button to get

--- a/app/views/budgets/create.html.erb
+++ b/app/views/budgets/create.html.erb
@@ -21,7 +21,7 @@
 
   <div class="clear"></div>
   <div class="col-md-12"  id="revise_checklist">
-    <form action="/checklist/new">
+    <form action="/checklist/new" method="get">
       <button class="btn btn-default">Wedding Elements Checklist</button>
     </form>
   </div>
