--- a/app/views/checklists/new.html.erb
+++ b/app/views/checklists/new.html.erb
@@ -149,6 +149,8 @@
         </label>
       </div>
 
+      <input type="hidden" name="total_budget" value="<%= params[:total_budget] %>">
+
 
       <div class="clear"></div>
         <div class="col-md-12"  id="submit_checklist">
