--- a/app/views/checklists/new.html.erb
+++ b/app/views/checklists/new.html.erb
@@ -14,9 +14,7 @@
 
 <div class="row">
   <div class="checklist_form">
-    <form id="budget_checklist" action="/checklist" method="post">
-      <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-
+    <%= form_for @checklist, url: checklist_path do |form| %>
       <div class="col-md-5 col-md-offset-1 form-group">
         <label>
           <input type="checkbox" name="element" value="dress"> Wedding Dress and Accessories
@@ -149,13 +147,13 @@
         </label>
       </div>
 
-      <input type="hidden" name="total_budget" value="<%= params[:total_budget] %>">
-
+      <%= form.hidden_field :total_budget %>
 
       <div class="clear"></div>
-        <div class="col-md-12"  id="submit_checklist">
-          <button class="btn btn-default">Help Me Plan!</button>
-        </div>
-    </form>
+
+      <div class="col-md-12" id="submit_checklist">
+        <button class="btn btn-default">Help Me Plan!</button>
+      </div>
+    <% end %>
   </div>
 </div>
